--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -17,4 +17,5 @@ jobs:
           close-pr-message: 'Unfortunately, this PR was not merged and is closed due to inactivity.'
           days-before-stale: 30
           days-before-close: 5
+          operations-per-run: 100
 
